--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Ubuntu mono, monospace;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -35,10 +35,17 @@ main {
 
 footer {
     background: #333;
-    color: #fff;
+    color: #c0e899;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+footer hr {
+    margin-top: 20px;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); /* Gradient line */
 }
