--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 
 header {
     background: #333;
-    color: #fff;
-    padding: 1rem;
+    color: #ffffff;
+    padding: 10px 20px;
     text-align: center;
 }
 
@@ -25,7 +25,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -37,15 +37,60 @@ footer {
     background: #333;
     color: #c0e899;
     text-align: center;
-    padding: 20px;
+    padding: 10px 20px;
     position: absolute;
     bottom: 0;
     width: 100%;
 }
 
-footer hr {
+.footer {
+    padding: 1px;
+    position: absolute;
+    width: 100%;
+}
+
+.footer hr {
     margin-top: 20px;
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); /* Gradient line */
 }
+
+.footer p {
+    margin: 10x 0; /* Spacing between paragraphs */
+}
+
+/* Adjusting child elements inside header and footer, if necessary */
+header h1, footer p {
+    margin: 0; /* Removes margin from the top and bottom */
+}
+
+:root {
+    --background-color-light: #f0f0f0; /* Light mode background */
+    --text-color-light: #333; /* Dark grey for light mode text */
+
+    --background-color-dark: #333; /* Dark mode background */
+    --text-color-dark: #f0f0f0; /* Light text for dark mode */
+}
+
+body.light-mode {
+    background-color: var(--background-color-light);
+    color: var(--text-color-light);
+}
+
+body.dark-mode {
+    background-color: var(--background-color-dark);
+    color: var(--text-color-dark);
+}
+
+.toggle-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #ddd; /* Button background color */
+    border: none;
+    border-radius: 5px;
+}
+
